--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     with:
       image: shekar1925/java-github-action-image
       tags: v1, latest
-      registry: https://registry.hub.docker.com/
+      registry: registry.hub.docker.com
       dockerfile: Dockerfile.ci
       username: ${{ secrets.DOCKER_USERNAME }}
       password: ${{ secrets.DOCKER_PASSWORD }}
