--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,12 +25,13 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-    - uses: mr-smithers-excellent/docker-build-push@v5
-      name: Build & push Docker image
+
+    - name: Build & push Docker image 
+      uses: mr-smithers-excellent/docker-build-push@v5
       with:
-      image: shekar1925/java-github-action-image
-      tags: v1, latest
-      registry: docker.io
-      dockerfile: Dockerfile.ci
-      username: ${{ secrets.DOCKER_USERNAME }}
-      password: ${{ secrets.DOCKER_PASSWORD }}
+        image: shekar1925/java-github-action-image
+        tags: v1, latest
+        registry: docker.io
+        dockerfile: Dockerfile.ci
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
