--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,11 +27,12 @@ jobs:
 
 
     - name: Build & push Docker image 
+
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: shekar1925/java-github-action-image
-        tags: v1, latest
+        tags: latest
         registry: docker.io
-        dockerfile: dockerfile
+        dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
