--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: shekar1925/java-github-action-image
-        tags: latest
+        tags: --all-tags
         registry: docker.io
         dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
