--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,6 +24,20 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+      
+    - name: Check out code
+      uses: actions/checkout@v2
+    
+    
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+          image: shekar1925/java-github-action-image
+          tags: latest
+          registry: docker.io
+          dockerfile: docker.cli
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
 
    
