--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
           image: shekar1925/java-github-action-image
           tags: latest
           registry: docker.io
-          dockerfile: docker.cli
+          dockerfile: Docker
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
