--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,15 +26,16 @@ jobs:
       run: mvn clean install
       
     - name: Check out code
-      uses: actions/checkout@v2
-    
+    - uses: actions/checkout@v2
+   
     - name: Build & push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v5
+    - uses: mr-smithers-excellent/docker-build-push@v5
       with:
-          image: shekar1925/java-github-action-image
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
+           image: shekar1925/java-github-action-image
+           tags: v1, latest
+           registry: docker.io
+           dockerfile: Dockerfile
+           username: ${{ secrets.DOCKER_USERNAME }}
+           password: ${{ secrets.DOCKER_PASSWORD }}
 
    
