--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: mr-smithers-excellent/docker-build-push@v5
       with:
            image: shekar1925/java-github-action-image
-           tags: v1, latest
+           tags: latest
            registry: docker.io
            dockerfile: Dockerfile
            username: ${{ secrets.DOCKER_USERNAME }}
