--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,15 +27,13 @@ jobs:
       
 
     - name: Check out code
-    - uses: actions/checkout@v2
+    - run: actions/checkout@v2
    
     - name: Build & push Docker image
     - uses: mr-smithers-excellent/docker-build-push@v5
       with:
            image: shekar1925/java-github-action-image
-           tags: latest
            registry: docker.io
-           dockerfile: Dockerfile
            username: ${{ secrets.DOCKER_USERNAME }}
            password: ${{ secrets.DOCKER_PASSWORD }}
 
