--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: project ci-cd java
+name: project ci-cd java-maven
 
 on:
   push:
@@ -26,9 +26,6 @@ jobs:
       run: mvn clean install
       
 
-    - name: Check out code
-    - run: actions/checkout@v2
-   
     - name: Build & push Docker image
     - uses: mr-smithers-excellent/docker-build-push@v5
       with:
