--- a/.github/workflows/maven2.yml
+++ b/.github/workflows/maven2.yml
@@ -29,6 +29,7 @@ jobs:
        uses: mr-smithers-excellent/docker-build-push@v5
        with:
         image: shekar1925/java-github-action-image
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
       
